[gd_scene load_steps=6 format=3 uid="uid://co7kucn2sklks"]

[ext_resource type="Script" path="res://Scripts/shop_card.gd" id="1_ot6uk"]
[ext_resource type="Texture2D" uid="uid://cjtkrgx4ohgy0" path="res://Assets/unit_sprites/Imps_Cards_Back_-_Final.1.png" id="2_4t4vx"]
[ext_resource type="Texture2D" uid="uid://tn6eguwflw2x" path="res://Assets/Unit_-_Test.png" id="3_t2orw"]
[ext_resource type="PackedScene" uid="uid://ddwdfxlw4r4wn" path="res://tooltip.tscn" id="4_tc8yf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_skkqy"]
size = Vector2(95, 143)

[node name="TempCard" type="Node2D"]
script = ExtResource("1_ot6uk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_4t4vx")

[node name="UnitSprite" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("3_t2orw")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_skkqy")

[node name="Tooltip" parent="." instance=ExtResource("4_tc8yf")]
visible = false
offset_left = 51.0
offset_top = -73.0
offset_right = 51.0
offset_bottom = -73.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
